# generics-mrsop-diff

./: README.md  default.nix  generics-mrsop-diff.cabal  generics-mrsop-diff.nix  generics-mrsop.nix  ghcid.sh  hs-digems.nix  lua.dot  mine-conflict.sh  nix-lock.nix  nix-version  nixpkgs.nix  p12.dot  run-result.sh  run-tests.sh  schg.dot  scp.dot  shell.nix  some-results.txt  stack.yaml  t1.dot  t2.dot  t3.dot  tags  todos  zipper.dot
experiments/: clj.csv  clj_slow.csv  counter-examples.sh  lua.csv  lua_slow.csv  mine-conflict.sh  miner-all.sh  miner-slow.sh  miner.sh  repos-clj.json  run-tests.sh  sanity.sh
experiments/scripts/: clone-or-pull-repos.sh  mine-conflicts.sh  minify-conflicts.sh  package-lock.json  package.json  prepare-result-folder.sh  preprocess.sh  repos.json  repos.json.old  score-repos.sh  verifyPatch.coffee
lua/: json2.lua  kong.a.lua  quicksort-2.lua  quicksort.lua
mrdiff/: Interface.hs  Main.hs
scratchpad/: ann.hs
src/: :q
src/Examples/: C.hs  Expr.hs  Lua.hs  MergePlayground.lhs  Stat.hs  TwoThreetree.hs
src/Examples/Lua/: Diffs.hs
src/Generics/MRSOP/: .GDiff.hs.swp  .GDiffOld.hs.swp  Diff.hs  Diff2.hs  Diff3.hs  GDiff.hs  GDiff2.hs  GDiffCopyExperiment.hs  GDiffOld.hs  GraphViz.hs  Hyper.hs
src/Generics/MRSOP/Diff/: Annotate.hs  Disjoint.hs  Enumerate.hs  Merge.hs  Merge.lhs  Untyped.hs  Zipper.hs
src/Generics/MRSOP/Diff/Annotate/: Translate.hs
src/Generics/MRSOP/GDiff/: Util.hs
src/Generics/MRSOP/GraphViz/: Deep.hs  Diff.hs  Diff2.hs  Zipper.hs
src/Language/Clojure/: AST.hs  Parser.hs
test/: Test.hs
