name:                generics-mrsop-diff

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.0
license:             BSD3
license-file:        LICENSE
author:              Arian van Putten
maintainer:          arian.vanputten@gmail.com
category:            Generics
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable diff-graphviz
  main-is:  diff-graphviz/Main.hs
  build-depends: base, generics-mrsop-diff, generics-mrsop
  default-language: Haskell2010

library
  -- Modules exported by the library.
  exposed-modules: 
    Generics.MRSOP.Diff
    Generics.MRSOP.Diff2
    Generics.MRSOP.Diff.Merge
    Generics.MRSOP.Diff.Annotate
    Generics.MRSOP.Diff.Annotate.Translate
    Generics.MRSOP.Diff.Enumerate
    Generics.MRSOP.GDiff
    Generics.MRSOP.GDiff.Util
    Generics.MRSOP.GraphViz
    Generics.MRSOP.GraphViz.Deep
    Generics.MRSOP.GraphViz.Diff
    Generics.MRSOP.GraphViz.Diff2
    Generics.MRSOP.GraphViz.Zipper
 
  other-modules:
    Examples.C
    Examples.Expr
    Examples.Lua
    Examples.Lua.Diffs
    Examples.TwoThreetree
  -- LANGUAGE extensions used by modules in this package.
  other-extensions: 
    MultiParamTypeClasses,
    FlexibleInstances,
    FlexibleContexts,
    TypeSynonymInstances,
    RankNTypes,
    TypeFamilies,
    TypeOperators,
    DataKinds,
    PolyKinds,
    GADTs,
    TypeApplications,
    ConstraintKinds,
    FunctionalDependencies,
    ScopedTypeVariables
  
  -- Other library packages from which modules are imported.
  build-depends:       base,
                       generics-mrsop,
                       language-lua,
                       language-c,
                       graphviz,
                       mtl,
                       text
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
