name:                generics-mrsop-diff

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.0
license:             BSD3
license-file:        LICENSE
author:              Arian van Putten
maintainer:          arian.vanputten@gmail.com
category:            Generics
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable mrdiff
  main-is: mrdiff/Main.hs
  ghc-options:
    -O3
    -fprof-auto
    -- "-with-rtsopts= -p -s -h -i0.1"
  build-depends:
    base,
    generics-mrsop-diff,
    generics-mrsop,
    language-lua,
    optparse-applicative,
    filepath,
    graphviz,
    text,
    criterion

test-suite generics-mrsop-diff-testsuite
  type: detailed-0.9
  test-module: Test
  hs-source-dirs: test
  build-depends: base, generics-mrsop-diff, generics-mrsop,  leancheck , Cabal

library
  ghc-options:
    -O3
  -- Modules exported by the library.
  exposed-modules: 
    Generics.MRSOP.Diff
    Generics.MRSOP.Diff.Annotate
    Generics.MRSOP.Diff.Annotate.Translate
    Generics.MRSOP.GDiff
    Generics.MRSOP.GDiff.Util
    Generics.MRSOP.GraphViz
    Generics.MRSOP.GraphViz.Deep
    Generics.MRSOP.GraphViz.Diff
    Examples.Lua
    Examples.TwoThreetree
    Language.Clojure.AST
    Language.Clojure.Parser
 
  other-modules:
    -- Examples.C
    -- Examples.Expr
    -- Examples.Lua.Diffs
  -- LANGUAGE extensions used by modules in this package.
  default-extensions: 
    MultiParamTypeClasses,
    FlexibleInstances,
    FlexibleContexts,
    TypeSynonymInstances,
    RankNTypes,
    TypeFamilies,
    TypeOperators,
    DataKinds,
    PolyKinds,
    PatternSynonyms,
    GADTs,
    TypeApplications,
    ConstraintKinds,
    FunctionalDependencies,
    ScopedTypeVariables
  
  -- Other library packages from which modules are imported.
  build-depends:       base,
                       generics-mrsop,
                       language-lua,
                       language-c,
                       graphviz,
                       mtl,
                       QuickCheck,
                       semigroupoids,
                       text,
                       parsec
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
